Job split + small changes

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -276,11 +276,31 @@
  origin_tec_bioshapers_secondary_species:0 "Bioservant Species"
  origin_tooltip_tec_bioshapers_effects:0 "Start the game with §Y2§! additional £pop£ Pops.\nStart the game with §Y8§! Bio-Construct £pop£ Replacing that many initial pops and with the infrastructure to build more bio-constructs."
  START_SCREEN_TEC_BIOSHAPERS:0 "The different cultures of [GetHomeWorldName] soon realized that genetic manipulation was a way to improve their life, from selecting fruits to cattle, from creating strands to surviving pandemics and pest, or using them to their benefit.\nThat obsession with genetic perfection derived in a colossal science effort to apply that knowledge to science, to be able to create life, a perfect and servile life to serve their purpose.\nAfter centuries of development, they did it, crafting a new being from a native specie, a new obedient servant they could tailor from even before its existence, building it block from block, cell from cell.\n\nAs they bended and controlled our very life blocks, they will shape the universe with their might."
+
+ origin_tec_synthetics:0 "TO DO"
+ origin_tec_synthetics_desc:0 "TO DO."
+ origin_tec_synthetics_tooltip:0 "TO DO"
+ START_SCREEN_ORIGIN_TEC_SYNTHETICS:0 "TO DO"
  
+ origin_tec_biomechanical:0 "TO DO"
+ origin_tec_biomechanical_desc:0 "TO DO."
+ origin_tec_biomechanical_tooltip:0 "TO DO"
+ START_SCREEN_ORIGIN_TEC_BIOMECHANICAL:0 "TO DO"
+
+ origin_tec_shieldworld:0 "TO DO"
+ origin_tec_shieldworld_desc:0 "TO DO."
+ origin_tec_shieldworld_tooltip:0 "TO DO"
+ START_SCREEN_ORIGIN_TEC_SHIELDWORLD:0 "TO DO"
+
+# --------------- Origin civics 
+ civic_tec_bioshapers_fleshcrafters:0 "Flesh Crafters"
+ civic_tec_bioshapers_fleshcrafters_desc:0 "TO DO"
+ civic_tec_bioshapers_fleshcrafters_tooltip:0 "TO DO"
+
 # --------------- Regular civics
  civic_tec_spiritualist_eras:0 "Eras of Contemplation"
  civic_tec_spiritualist_eras_desc:0 "This empire reinforces its faith with the unrelenting pass of time as a way of manifesting the divine, dedicating entire generations to a different cycle of the same pure creed."
- civic_tooltip_tec_spiritualist_eras_effects:0 "This empire, depending on its governing ethics, will periodically change between different cycling ''Eras'' of cult, gaining diverse bonuses and penalties:\n\n- §HEra of Wills:§! (to do).\n- §HEra of Demise:§! (to do).\n- §HEra of Grief:§! (to do).\n- §HEra of Cultivation:§! (to do).\n\n"
+ civic_tec_spiritualist_eras_tooltip:0 "This empire, depending on its governing ethics, will periodically change between different cycling ''Eras'' of cult, gaining diverse bonuses and penalties:\n\n- §HEra of Wills:§! (to do).\n- §HEra of Demise:§! (to do).\n- §HEra of Grief:§! (to do).\n- §HEra of Cultivation:§! (to do).\n\n"
 
  civic_tec_paperwork_cult:0 "Bureaucratic Monasticism"
  civic_tec_paperwork_cult_desc:0 "Paperwork, signatures, taxes, requests... all are manifestations of the divine for this society, with bureaucracy and faith mutually ingrained together; any petition or prayer must be properly corresponded with a signed in triplicate instance."
