--- a/localisation/english/zz_evolved_origins_l_english.yml
+++ b/localisation/english/zz_evolved_origins_l_english.yml
@@ -106,7 +106,7 @@ civic_slavetothesystem_secondary_species:0 "Cyborg civils"
 
  origin_tec_cyborgs:0 "Premature Augmentation"
  origin_tec_cyborgs_desc:0 "§ROrigin not ready to be playable.§!\n\nThanks to a combination of their own intellect and ''secondary conditioning factors'', this species resorted to the early development of cybernetic implants that are now a radical part of their culture, their society and their very bodies."
- origin_tooltip_tec_cyborgs_effects:0 "§ROrigin not ready to be playable.§!- Gain the §HCybernetic§! trait and all the benefits of §H$ap_the_flesh_is_weak$§! ascension perk, without ne need of unlocking it.\n- This species can use their knowledge of cybernetic technologies to §HAssimilate§! other species by §HNon conventional means§!.\n- This empire has the ability to further §HImprove§! their own cybernetic implants, by delving into their §HPast§! and reverse-engineering the §HSource§! of their augmentations."
+ origin_tooltip_tec_cyborgs_effects:0 "§ROrigin not ready to be playable.§!- Main species gain the §HCybernetic§! trait.\n- This species can use their knowledge of cybernetic technologies to §HAssimilate§! other species by §HNon conventional means§!.\n- This empire has the ability to further §HImprove§! their own cybernetic implants, by delving into their §HPast§! and reverse-engineering the §HSource§! of their augmentations."
  START_SCREEN_TEC_CYBORGS:0 "To do."
 
  origin_tec_genetics:0 "Masters of Genesis"
