Added localization on factory building for gestalts

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3685,3 +3685,5 @@ mod_tec_pop_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from £pop
 
 
 job_angler_effect_desc: "$job_aqu_angler_effect_desc$"
+
+building_tec_factory_gestalt: "\n§HThis building will swap half of the £job_foundry£ $job_alloy_drone_plural$/$job_fabricator_plural$ jobs on the Industrial district to £job_artisan£ $job_artisan_drone_plural$ Jobs.§!"
