changes pre mixed ascension integration

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -759,6 +759,62 @@
  trait_tec_robot_deployment_desc:0 "§Likea?§!"
  TRAIT_TEC_ROBOT_DEPLOYMENT_EFFECT:0 "New colonies will gain §Y1§! additional £pop£ Pop.\nPop Housing usage: §G-10%§!"
 
+# --------------- BIOLOGICAL PATH TRAITS ----------------------
+# xenotransplantation
+ trait_tec_bio_mutagenic:0 "Integrated Muta-Genus"
+ trait_tec_bio_mutagenic_desc:0 "§LTo do§!"
+
+ mod_trait_tec_biological_mutagenus_tooltip:0 "[tec_trait_cybernetic_module_block_1][tec_trait_cybernetic_module_block_2][tec_trait_cybernetic_submodule_block_1][tec_trait_cybernetic_submodule_block_2][tec_trait_cybernetic_leader_block]"
+
+ tec_trait_tec_bio_mutagenic_symbiote:0 "Symbiote:\n"
+ tec_trait_tec_bio_mutagenic_mutation:0 "Mutation:\n"
+ tec_trait_tec_bio_mutagenic_evolution:0 "Forced Evolution:\n"
+
+ trait_tec_bio_exoskeleton:0 "Xenoskeleton"
+ trait_tec_bio_exoskeleton_desc:0 ""
+
+ trait_tec_bio_intellect:0 "Mutative Intellect"
+ trait_tec_bio_intellect_desc:0 "§LTo do§!"
+
+ trait_tec_bio_brain:0 "Cortex Germinations"
+ trait_tec_bio_brain_desc:0 ""
+
+ trait_tec_bio_symbiotes:0 "Polyorganic Symbiotes"
+ trait_tec_bio_symbiotes_desc:0 ""
+ 
+ trait_tec_bio_overdrive:0 "Endocrinal Overdrive"
+ trait_tec_bio_overdrive_desc:0 ""
+
+ trait_tec_bio_reproduction:0 "Accelerated Mitosis"
+ trait_tec_bio_reproduction_desc:0 ""
+
+ trait_tec_bio_appendages:0 "Bio-Appendages"
+ trait_tec_bio_appendages_desc:0 ""
+
+ trait_tec_bio_unity:0 "Cellular Memory"
+ trait_tec_bio_unity_desc:0 ""
+
+ trait_tec_bio_unimind:0 "Geno-Unimind"
+ trait_tec_bio_unimind_desc:0 ""
+
+ trait_tec_bio_energy:0 "Bioelectric Synchrony"
+ trait_tec_bio_energy_desc:0 ""
+
+ trait_tec_bio_mining:0 "Litochemical Biology"
+ trait_tec_bio_mining_desc:0 ""
+
+ trait_tec_bio_farming:0 "Biomatter Affinity"
+ trait_tec_bio_farming_desc:0 ""
+
+# --------------- CYBERPSIONIC THINGS TRAITS ----------------------
+ building_tec_cyberpsionic_gate:0 "Phase-Gate"
+ building_tec_cyberpsionic_gate_plural:0 "Phase-Gates"
+ building_tec_cyberpsionic_gate_desc:0 "TO DO"
+
+ building_tec_cyberpsionic_zro_refinery:0 "Phase Transmutter"
+ building_tec_cyberpsionic_zro_refinery_plural:0 "Phase Transmutters"
+ building_tec_cyberpsionic_zro_refinery_desc:0 "Advanced installations that refine Zro particles into energy by applying physic principles to anomalous crossdimensional matter"
+
 # ------------------------------------------------- Megacities
  # Note: Not og civic but better putting these all together
  # Just for the sake of convenience
