--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -169,9 +169,9 @@ empire_not_elitist_or_materialist:0 "$TRIGGER_FAIL$Our empire does not embrace e
  mod_planet_jobs_tec_cybernetics_upkeep_mult:0 "§BCybernetic§! Pop Upkeep"
 
  # Trait specific
- planet_jobs_tec_purelinked:0 "Embroided Pops"
- mod_planet_jobs_tec_purelinked_produces_mult:0 "§YEmbroided§! Pop Output"
- mod_planet_jobs_tec_purelinked_upkeep_mult:0 "§YEmbroided§! Pop Upkeep"
+ planet_jobs_tec_biopsionic_embroided:0 "Embroided Pops"
+ mod_planet_jobs_tec_biopsionic_embroided_produces_mult:0 "§YEmbroided§! Pop Output"
+ mod_planet_jobs_tec_biopsionic_embroided_upkeep_mult:0 "§YEmbroided§! Pop Upkeep"
 
  planet_jobs_tec_cyberlinked:0 "Cyberconnected Pops"
  mod_planet_jobs_tec_cyberlinked_produces_mult:0 "§BCyberentangled§! Pop Output"
@@ -660,39 +660,6 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
 # --------------- BIOLOGICAL PATH TRAITS ----------------------
 # xenotransplantation
- trait_tec_bio_exoskeleton:0 "Xenoskeleton"
- trait_tec_bio_exoskeleton_desc:0 ""
-
- trait_tec_bio_symbiotes:0 "Polyorganic Symbiotes"
- trait_tec_bio_symbiotes_desc:0 ""
- 
- trait_tec_bio_overdrive:0 "Endocrinal Overdrive"
- trait_tec_bio_overdrive_desc:0 ""
-
- trait_tec_bio_reproduction:0 "Polyreproduction"
- trait_tec_bio_reproduction_desc:0 ""
-
- trait_tec_bio_appendages:0 "Exo-Appendages"
- trait_tec_bio_appendages_desc:0 ""
-
- trait_tec_bio_brain:0 "Cortex Germinations"
- trait_tec_bio_brain_desc:0 ""
-
- trait_tec_bio_unity:0 "Cellular Memory"
- trait_tec_bio_unity_desc:0 ""
-
- trait_tec_bio_unimind:0 "Geno-Unimind"
- trait_tec_bio_unimind_desc:0 ""
-
- trait_tec_bio_energy:0 "Bioelectric Synchrony"
- trait_tec_bio_energy_desc:0 ""
-
- trait_tec_bio_mining:0 "Excavation Instinct"
- trait_tec_bio_mining_desc:0 ""
-
- trait_tec_bio_farming:0 "Biomatter Affinity"
- trait_tec_bio_farming_desc:0 ""
-
 
 
 # --------------- CYBORG ASCENSION TRAITS ----------------------
@@ -849,31 +816,52 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
 
  # Basic traits
-trait_tec_replicant_lithoid:0 "Nano-Silicoid"
-trait_tec_replicant_lithoid_desc:0 "§LThis replicant species have an alternative way of retrofitting their synth-organic necessities; via nanobiological processes, they can obtain nutrition and nourishment by decomposing inert and mineral material.§!"
+ trait_tec_replicant_lithoid:0 "Nano-Silicoid"
+ trait_tec_replicant_lithoid_desc:0 "§LThis replicant species have an alternative way of retrofitting their synth-organic necessities; via nanobiological processes, they can obtain nutrition and nourishment by decomposing inert and mineral material.§!"
  TRAIT_TEC_REPLICANT_LITHOID_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
 
-trait_tec_replicant_lambda:0 "Lambda Composite"
-trait_tec_replicant_lambda_desc:0 "§LThis replicant species have an alternative way of retrofitting their synth-organic necessities; via nanobiological processes, they can obtain nutrition and nourishment by decomposing inert and mineral material.§!"
+ trait_tec_replicant_lambda:0 "Lambda Composite"
+ trait_tec_replicant_lambda_desc:0 "§LThis replicant species have an alternative way of retrofitting their synth-organic necessities; via nanobiological processes, they can obtain nutrition and nourishment by decomposing inert and mineral material.§!"
  TRAIT_TEC_REPLICANT_LAMBDA_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
 
-trait_tec_replicant_brain:0 "Neural hybridation"
-trait_tec_replicant_brain_desc:0 "§LNanoprocessors and nano memory storages complement natural neural activities, creating a network of cooperative cognitive and intellectual interchanges, greatly enhancing this species intellect and creativity.§!"
+ trait_tec_replicant_brain:0 "Neural hybridation"
+ trait_tec_replicant_brain_desc:0 "§LNanoprocessors and nano memory storages complement natural neural activities, creating a network of cooperative cognitive and intellectual interchanges, greatly enhancing this species intellect and creativity.§!"
+ trait_tec_replicant_brain_effect_standard:0 "£trigger_tec_research£ Research from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+20%§!"
+ trait_tec_replicant_brain_effect_advanced:0 "£trigger_tec_research£ Research from £job_researcher£ [GetResearcherPlural]: §G+1§!\n£unity£ Unity from [GetAdministratorPluralWithIcon]: §G+1§!"
 
-trait_tec_replicant_body:0 "Enhanced Body"
-trait_tec_replicant_body_desc:0 "§LA perfect composition of both technological and biological mix, with a really efficient metabolism and a impervious health and efficient usage of energy makes this species have a close to perfect body.§!"
+ trait_tec_replicant_body:0 "Augmented Physique"
+ trait_tec_replicant_body_desc:0 "§LA perfect bodily composition, paired with a really efficient metabolism and a impervious health and efficient usage and recyclement of resources makes this species have a close to perfect body.§!"
+ trait_tec_replicant_body_effect_standard:0 "$MOD_POP_AMENITIES_USAGE_MULT$: §G-15%§!\n$mod_planet_pops_upkeep_mult$: §G-10%§!"
+ trait_tec_replicant_body_effect_advanced:0 "$MOD_POP_AMENITIES_USAGE_MULT$: §G-25%§!\n$mod_planet_pops_upkeep_mult$: §G-20%§!"
+
+ trait_tec_replicant_habitability:0 "Adaptable Nanocells"
+ trait_tec_replicant_habitability_desc:0 "§LIntelligent biosynthetic measures allow a high degree of adaptation for this replicant species, modifying physionomy, capacities and the whole organism for with the environment.§!"
+ trait_tec_replicant_habitability_effect_standard:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_CEIL$§!: §G+25%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
+ trait_tec_replicant_habitability_effect_advanced:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_CEIL$§!: §G+50%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
 
 	# +10% basic and industrial resources
-trait_tec_replicant_capacitor:0 "Replicant Capacitors"
-trait_tec_replicant_capacitor_desc:0 "§LAdapted inside normally hollow micro cavities of the body, this species has a myriad of specifically designed bio-nanites that can be molded and adapted to greatly enhance physical capacities, increasing the abilities and endurance of the individuals in any situation.§!"
+ trait_tec_replicant_capacitor:0 "Nano-Capacitors"
+ trait_tec_replicant_capacitor_desc:0 "§LAdapted inside normally hollow micro cavities of the body, this species has a myriad of specifically designed nanites integrated with computing, work and development spaces.§!"
+ trait_tec_replicant_capacitor_effect_standard:0 "Resources from Jobs: §G+10%§!"
+ trait_tec_replicant_capacitor_effect_advanced:0 "Each Replicant pop provides §G+0.33%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
 
 	# growth speed and assembly speed
-trait_tec_replicant_universal:0 "Universal Template"
-trait_tec_replicant_universal_desc:0 "§LConstant actuators and a resilient genetic and programming code allows a really effective reproductive rate, either being natural, forced cloning or enhanced development.§!"
+ trait_tec_replicant_universal:0 "Universal Template"
+ trait_tec_replicant_universal_desc:0 "§LConstant actuators and a resilient genetic and programming code allows a really effective reproductive rate, either being natural, forced cloning or enhanced development.§!"
+ trait_tec_replicant_universal_effect_standard:0 "Pop growth: §G+20%§!\nPop Assembly Speed: §G+20%§!"
+ trait_tec_replicant_universal_effect_advanced:0 "Pop Assembly Speed: §G+40%§!"
+
+	# Budding
+ trait_tec_replicant_budding:0 "Enhanced Bioprinting"
+ trait_tec_replicant_budding_desc:0 "§LSeveral nanocomposites and biomechanical adaptations allow a flexible method of reproduction by direct pseudo-replication of the original template of this species.§!"
+ trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.025§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ trait_tec_replicantbudding_effect_advanced:0 "Each replicant pop working as a slave or better produces §G0.05§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
 	# army damage army health allows replicant armies
-trait_tec_replicant_warfare:0 "Bio-Warform"
-trait_tec_replicant_warfare_desc:0 "§LImprinted combat capacities, external layers of nano-dermis and a overclocked cyber-biological organs, with also integrated weapons and modular capacities make this species a deadly powerhouse, able to overcome any regular opponent.§!"
+ trait_tec_replicant_warfare:0 "Bio-Warform"
+ trait_tec_replicant_warfare_desc:0 "§LImprinted combat capacities, external layers of nano-dermis and a overclocked cyber-biological organs, with also integrated weapons and modular capacities make this species a deadly powerhouse, able to overcome any regular opponent.§!"
+ trait_tec_replicant_warfare_effect_standard:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
+ trait_tec_replicant_warfare_effect_advanced:0 "Army Damage: §G+40%§!\nArmy Health: §G+40%§!\nArmy Morale Damage: §G+25%§!"
 
 # --------------- MACHINE ASCENSION TRAITS ----------------------
 # Advanced robot traits
@@ -1047,37 +1035,49 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
 # --------------- BIOPSIONIC ASCENSION TRAITS ----------------------
 
- trait_tec_pure_psionic:0 "Psionic Purity"
- trait_tec_pure_psionic_desc:0 "§LHarmony of body, mind and soul, reached in the purest of forms.§!"
- #trait_tec_pure_psionic_hive:0 "Psionic Purity"
- #trait_tec_pure_psionic_hive_desc:0 "§LHarmony of body, mind and will, reached in the purest of forms.§!"
+ trait_tec_biopsionic:0 "Psionic Purity"
+ trait_tec_biopsionic_desc:0 "§LHarmony of body, mind and soul, reached in the purest of forms.§!"
+ #trait_tec_biopsionic_hive:0 "Psionic Purity"
+ #trait_tec_biopsionic_hive_desc:0 "§LHarmony of body, mind and will, reached in the purest of forms.§!"
 
- trait_tec_pure_embroided:0 "Embroided Minds"
- trait_tec_pure_embroided_desc:0 "§LA kind of strong biopsionic link unites all the members of this species, far beyond what any kind of naturally biological, psionically gifted or artificially engineered creates, sharing knowledge, experiences and feelings.§!"
- TRAIT_TEC_PURE_EMBROIDED_EFFECT:0 "£unity£ Unity from jobs: §G+10%§!\nEach pop will increase the output of any other pop with this trait present in the planet by §G+0.15%§!.§!"
+ trait_tec_biopsionic_embroided:0 "Embroided Minds"
+ trait_tec_biopsionic_embroided_desc:0 "§LA kind of strong biopsionic link unites all the members of this species, far beyond what any kind of naturally biological, psionically gifted or artificially engineered creates, sharing knowledge, experiences and feelings.§!"
+ trait_tec_biopsionic_EMBROIDED_EFFECT:0 "£unity£ Unity from jobs: §G+10%§!\nEach pop will increase the output of any other pop with this trait present in the planet by §G+0.15%§!.§!"
 
- trait_tec_pure_brain:0 "Knowledge Transference"
- trait_tec_pure_brain_desc:0 "§LUsing potent neurotransmissors paired with the increased psionic activity on this species members, they can transfer unfathomable amounts of thoughts in a moment, specially when both parts are in highly enriching environments.§!"
- TRAIT_TEC_PURE_BRAIN_EFFECT:0 "£trigger_tec_research£ Research Output: §G+10%§!\nWhenever a leader levels up, there is a small chance of providing the total amount of experience required for that level to any leader of the same category."
+ trait_tec_biopsionic_brain:0 "Knowledge Transference"
+ trait_tec_biopsionic_brain_desc:0 "§LUsing potent neurotransmissors paired with the increased psionic activity on this species members, they can transfer unfathomable amounts of thoughts in a moment, specially when both parts are in highly enriching environments.§!"
+ trait_tec_biopsionic_BRAIN_EFFECT:0 "£trigger_tec_research£ Research Output: §G+10%§!\nWhenever a leader levels up, there is a small chance of providing the total amount of experience required for that level to any leader of the same category."
 
- trait_tec_pure_memory:0 "Transgenetic Memory"
- trait_tec_pure_memory_desc:0 "§LPart of the genetic code of this species is imbued with direct memories of previous generatios and direct relatives, with a capacity to even keep memories long after the original owner passed out.§!"
- TRAIT_TEC_PURE_MEMORY_EFFECT:0 "£unity£ Unity Output: §G+10%§!\nWhenever a leader dies, there is a small chance of that leader coming back on a younger self."
+ trait_tec_biopsionic_memory:0 "Transgenetic Memory"
+ trait_tec_biopsionic_memory_desc:0 "§LPart of the genetic code of this species is imbued with direct memories of previous generatios and direct relatives, with a capacity to even keep memories long after the original owner passed out.§!"
+ trait_tec_biopsionic_MEMORY_EFFECT:0 "£unity£ Unity Output: §G+10%§!\nWhenever a leader dies, there is a small chance of that leader coming back on a younger self."
 
- trait_tec_pure_adaptability:0 "Innate Will"
- trait_tec_pure_adaptability_desc:0 "§LThe endurance and capacities of survival and adaptation of this species is extreme for any physical, mental or psionic issue.§!"
- TRAIT_TEC_PURE_ADAPTABILITY_EFFECT:0 "A"
+ trait_tec_biopsionic_adaptability:0 "Innate Will"
+ trait_tec_biopsionic_adaptability_desc:0 "§LThe endurance and capacities of survival and adaptation of this species is extreme for any physical, mental or psionic issue.§!"
+ trait_tec_biopsionic_ADAPTABILITY_EFFECT:0 "A"
 
- trait_tec_pure_happiness:0 "Inner Calm"
- trait_tec_pure_happiness_desc:0 "§LAn aura of soothing and tranquility imbues this species, allowing a degree of compfort and control over any situation.§!"
+ trait_tec_biopsionic_happiness:0 "Inner Calm"
+ trait_tec_biopsionic_happiness_desc:0 "§LAn aura of soothing and tranquility imbues this species, allowing a degree of compfort and control over any situation.§!"
 
- trait_tec_pure_soulshaping:0 "Soulshaping"
- trait_tec_pure_soulshaping_desc:0 "§LFor this species, their own very consciousness is a pathway and tool to reshape their own bodies, and so they do for reaching an incredible biological and mental balance.§!"
- TRAIT_TEC_PURE_SOULSHAPING_EFFECT:0 "£pops£ Converged Pop Output: §G+10%§!\nThis species has an incredible capacity of resistance against any illness or disease."
+ trait_tec_biopsionic_soulshaping:0 "Soulshaping"
+ trait_tec_biopsionic_soulshaping_desc:0 "§LFor this species, their own very consciousness is a pathway and tool to reshape their own bodies, and so they do for reaching an incredible biological and mental balance.§!"
+ trait_tec_biopsionic_SOULSHAPING_EFFECT:0 "£pops£ Converged Pop Output: §G+10%§!\nThis species has an incredible capacity of resistance against any illness or disease."
 
- trait_tec_pure_a:0 "Inner Calm"
- trait_tec_pure_a_desc:0 "§LA§!"
- TRAIT_TEC_PURE_A_EFFECT:0 "A"
+ trait_tec_biopsionic_a:0 "Inner Calm"
+ trait_tec_biopsionic_a_desc:0 "§LA§!"
+ trait_tec_biopsionic_A_EFFECT:0 "A"
+
+ trait_tec_biopsionic_seed:0 "Biopsionic Seed"
+ trait_tec_biopsionic_seed_desc:0 ""
+ trait_tec_biopsionic_seed_effect:0 "This organic species is considered §MPsionic§! and benefits from §HPsionic bonuses§! and modifiers, but has no psionic capacities. Also counts as §HEmbroided Minded§! pops."
+
+ trait_tec_biopsionic_germination:0 "Essence Germination"
+ trait_tec_biopsionic_germination_desc:0 ""
+ trait_tec_biopsionic_germination_effect:0 ""
+
+ trait_tec_biopsionic_convergence:0 "Harmonic Convergence"
+ trait_tec_biopsionic_convergence_desc:0 ""
+ trait_tec_biopsionic_convergence_effect:0 ""
 
 # --------------- CYBERPSIONIC ASCENSION TRAITS ----------------------
 # T3
