--- a/localisation/english/zz_evolved_ships_armies_l_english.yml
+++ b/localisation/english/zz_evolved_ships_armies_l_english.yml
@@ -280,6 +280,14 @@
  biohorror_army_desc_proper:0 "This giant biological creature both serves as a remote mind relay for the Hive Mind and as a true mass of destruction, using claws, jaws or acid, for neutralizing and consuming enemy foes."
 # biohorror_armytrigger_tooltip:0 "."
 
+ biotitan_army:0 "Bio-Titan"
+ biotitan_army_plural:0 "Bio-Titans"
+ biotitan_army_desc:0 "This giant biological creature both serves as a remote mind relay for the Hive Mind and as a true mass of destruction, using claws, jaws or acid, for neutralizing and consuming enemy foes."
+ biotitan_army_proper:0 "Bio-Titan"
+ biotitan_army_plural_proper:0 "Bio-Titans"
+ biotitan_army_desc_proper:0 "This giant biological creature both serves as a remote mind relay for the Hive Mind and as a true mass of destruction, using claws, jaws or acid, for neutralizing and consuming enemy foes."
+# biohorror_armytrigger_tooltip:0 "."
+
 
  simulant_army:0 "Simulant Assault Pack"
  simulant_army_plural:0 "Simulant Assault Packs"
