--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -619,6 +619,38 @@
 	tr_tec_reestructure_final_3_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_artifice_final_3_text$"
 	tr_tec_reestructure_final_3_disabled_delayed:0 "$tr_tec_artifice_final_3_delayed$"
 
+# --------------------------- ASCENSION T1 --------------------------------
+# Biological Mutation (B)
+# ------------------------------------------------------------
+ tradition_tec_biological:0 "Evolution"
+ tradition_tec_biological_desc:0 "We have surpassed the limits natural biology imposed on our bodies, and now each single cell of our very selves are a tool to build our future."
+
+ tr_tec_biological_adopt:0 "$tradition_tec_biological$ Traditions"
+ tr_tec_biological_adopt_tooltip:0 "Allows the construction of £building£ §HXenotransplantation Chambers§!.\nUnlocks the £job_purge£ §HXenoextraction§! purge type.\nBiological species can be harvested for £tec_genepoints£ Xenocytes and £society£ Society via Xenotransplantation Chambers or Xenoextraction purge type.\n£tec_genepoints£ §YXenocytes§! can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
+
+ tr_tec_biological_finish:0 "$tradition_tec_biological$ Traditions Finished"
+ tr_tec_biological_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
+
+ tr_tec_biological_1:0 "Stemic Overdrive"
+ tr_tec_biological_1_delayed:0 "to do"
+ tr_tec_biological_1_tooltip:0 "Biological §Y$MOD_LEADER_AGE$§! increased by §G15§! years per §HOrganic Modification Point§!.\n£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_FLOOR$§! increased by §G5%§! per §HOrganic Modification Point§!."	
+
+ tr_tec_biological_2:0 "Cellular Manipulation"
+ tr_tec_biological_2_delayed:0 "to do"
+ tr_tec_biological_2_tooltip:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species.\nCan §YAlter§! Pop §YAppearance§! with Species Modification."
+
+ tr_tec_biological_3:0 "Directed Mutations"
+ tr_tec_biological_3_delayed:0 "Change can be focused towards our interests if we force the manifestation of adequate mutations, later scrubbing undesirable traits, or converting them into desirable ones."
+ tr_tec_biological_3_tooltip:0 "Unlocks Mutagenic Traits.\nMutagenic Traits are traits available for Biological Species which get adapted to the main Muta-Genus of the empire, and can be upgraded with £tec_genepoints£ §YXenocytes§!."
+
+ tr_tec_biological_4:0 "Biomatter Reclamation"
+ tr_tec_biological_4_delayed:0 "to do"
+ tr_tec_biological_4_tooltip:0 "Pops undergoing Xenotransplantation or Xenoextraction also produce extra £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £unity£ §YUnity§!."
+
+ tr_tec_biological_5:0 "TO DO"
+ tr_tec_biological_5_delayed:0 "to do"
+ tr_tec_biological_5_tooltip:0 "Harvested DNA from leviathans and Xenocytes obtained from different archetypes can be recombined with mutagenic traits, making them manifest additional bonuses when fully upgraded."
+
 # --------------------------- ASCENSION T3 --------------------------------
 # Genetic Perfection (A)
 # ------------------------------------------------------------
@@ -789,65 +821,65 @@
 # ------------------------------------------------------------
 	# Requires having finished the "Accelerated Augmentation" situation
 	# Requires having finished the "Cybernetic Revolution" situation
- tradition_tec_evolved_revolution:0 "Revolution"
- tradition_tec_evolved_revolution_desc:0 "to do."
+ tradition_tec_evolved_cybernetics:0 "Revolution"
+ tradition_tec_evolved_cybernetics_desc:0 "to do."
 
- tr_tec_evolved_revolution_adopt:0 "$tradition_tec_evolved_revolution$"
- tr_tec_evolved_revolution_adopt_tooltip:7 "to do - effect\n\nAllows the §YAssimilation§! of Organic pops, cybernetic or not, into §BAdvanced Cyborgs§!."
+ tr_tec_evolved_cybernetics_adopt:0 "$tradition_tec_evolved_cybernetics$"
+ tr_tec_evolved_cybernetics_adopt_tooltip:7 "to do - effect\n\nAllows the §YAssimilation§! of Organic pops, cybernetic or not, into §BAdvanced Cyborgs§!."
 
- tr_tec_evolved_revolution_finish:0 "$tradition_tec_evolved_revolution$ Traditions Finished"
- tr_tec_evolved_revolution_finish_tooltip:4 "to do - "
- tr_tec_evolved_revolution_finish_effect:4 ""
+ tr_tec_evolved_cybernetics_finish:0 "$tradition_tec_evolved_cybernetics$ Traditions Finished"
+ tr_tec_evolved_cybernetics_finish_tooltip:4 "to do - "
+ tr_tec_evolved_cybernetics_finish_effect:4 ""
 
- tr_tec_evolved_revolution_1:0 ""
- tr_tec_evolved_revolution_1_tooltip:0 "TO DO effect"
- tr_tec_evolved_revolution_1_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_tec_evolved_cybernetics_1:0 ""
+ tr_tec_evolved_cybernetics_1_tooltip:0 "TO DO effect"
+ tr_tec_evolved_cybernetics_1_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
- tr_tec_evolved_revolution_2:0 "Conclusive Blueprints"
- tr_tec_evolved_revolution_2_tooltip:0 "TO DO effect"
- tr_tec_evolved_revolution_2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_tec_evolved_cybernetics_2:0 "Conclusive Blueprints"
+ tr_tec_evolved_cybernetics_2_tooltip:0 "TO DO effect"
+ tr_tec_evolved_cybernetics_2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
  # Scaling
-	tr_tec_evolved_revolution_3:0 "Connective Armor I"
-	tr_tec_evolved_revolution_3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G10%§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_revolution_3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_3:0 "Connective Armor I"
+	tr_tec_evolved_cybernetics_3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G10%§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_revolution_3_t2:0 "Connective Armor II"
-	tr_tec_evolved_revolution_3_t2_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G20%§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_revolution_3_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_3_t2:0 "Connective Armor II"
+	tr_tec_evolved_cybernetics_3_t2_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G20%§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_3_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_revolution_3_t3:0 "Connective Armor III"
-	tr_tec_evolved_revolution_3_t3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G50%§!."
-	tr_tec_evolved_revolution_3_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_3_t3:0 "Connective Armor III"
+	tr_tec_evolved_cybernetics_3_t3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G50%§!."
+	tr_tec_evolved_cybernetics_3_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_revolution_4:0 "Synergistic Implants I"
-	tr_tec_evolved_revolution_4_tooltip:0 "Cybernetic species gain a §G1%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_revolution_4_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_4:0 "Synergistic Implants I"
+	tr_tec_evolved_cybernetics_4_tooltip:0 "Cybernetic species gain a §G1%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_4_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_revolution_4_t2:0 "Synergistic Implants II"
-	tr_tec_evolved_revolution_4_t2_tooltip:0 "Cybernetic species gain a §G2%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_revolution_4_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_4_t2:0 "Synergistic Implants II"
+	tr_tec_evolved_cybernetics_4_t2_tooltip:0 "Cybernetic species gain a §G2%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_4_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_revolution_4_t3:0 "Synergistic Implants III"
-	tr_tec_evolved_revolution_4_t3_tooltip:0 "Cybernetic species gain a §G3%§! output per §YCybernetic trait§!."
-	tr_tec_evolved_revolution_4_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_4_t3:0 "Synergistic Implants III"
+	tr_tec_evolved_cybernetics_4_t3_tooltip:0 "Cybernetic species gain a §G3%§! output per §YCybernetic trait§!."
+	tr_tec_evolved_cybernetics_4_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
- tr_tec_evolved_revolution_5:0 "TO DO name"
- tr_tec_evolved_revolution_5_tooltip:0 "TO DO effect"
- tr_tec_evolved_revolution_5_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_tec_evolved_cybernetics_5:0 "TO DO name"
+ tr_tec_evolved_cybernetics_5_tooltip:0 "TO DO effect"
+ tr_tec_evolved_cybernetics_5_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
  # Finishers
-	tr_tec_evolved_revolution_6_a:0 "The Flesh is Mine"
-	tr_tec_evolved_revolution_6_a_tooltip:0 "TO DO effect - Allows the assimilation of sentient organics into either the main cybernetic species or into new robots, if possible, controlled via policy."
-	tr_tec_evolved_revolution_6_a_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_6_a:0 "The Flesh is Mine"
+	tr_tec_evolved_cybernetics_6_a_tooltip:0 "TO DO effect - Allows the assimilation of sentient organics into either the main cybernetic species or into new robots, if possible, controlled via policy."
+	tr_tec_evolved_cybernetics_6_a_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_revolution_6_b:0 "TO DO name"
-	tr_tec_evolved_revolution_6_b_tooltip:0 "TO DO effect"
-	tr_tec_evolved_revolution_6_b_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_6_b:0 "TO DO name"
+	tr_tec_evolved_cybernetics_6_b_tooltip:0 "TO DO effect"
+	tr_tec_evolved_cybernetics_6_b_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_revolution_6_c:0 "TO DO name"
-	tr_tec_evolved_revolution_6_c_tooltip:0 "TO DO effect"
-	tr_tec_evolved_revolution_6_c_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_6_c:0 "TO DO name"
+	tr_tec_evolved_cybernetics_6_c_tooltip:0 "TO DO effect"
+	tr_tec_evolved_cybernetics_6_c_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
 # Conscious Singularity (B)
 # ------------------------------------------------------------
